--- a/text/master-thesis.tex
+++ b/text/master-thesis.tex
@@ -316,6 +316,7 @@ Výhody stromové struktury jsou jasné. U každého uzlu se dá zjistit jaké m
     \label{fig:zookeeper-impl}
 \end{figure}
 
+\newpage
 \subsection{Esper}
 \label{sec:esper}
 \section{Události v systému}
